force/src/objects/Tax_ID_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax ID History</relationshipLabel>
        <relationshipName>Tax_ID_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRS_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IRS Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Business_Type__c</fullName>
        <label>Practice Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S - Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>C - Corporation</fullName>
                </value>
                <value>
                    <fullName>F - Laser Vision Correction</fullName>
                </value>
                <value>
                    <fullName>P - Partnership</fullName>
                </value>
                <value>
                    <fullName>U - Optometric School or University</fullName>
                </value>
                <value>
                    <fullName>V - Affiliate Provider</fullName>
                </value>
                <value>
                    <fullName>W - Applicant Doctor</fullName>
                </value>
                <value>
                    <fullName>X - Group Authorized Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Tax ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Key__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Vision Care Key</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Practice_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Care Practice City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Practice_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Care Practice State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Practice_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Care Practice Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Practice_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vision Care Practice Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Tax ID History</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Tax ID History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax ID History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>